# agentic-team

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  REFACTOR_IMPLEMENTATION_PLAN.md  install.sh  main.py  observe.py  pyproject.toml  run-mcp.sh  uninstall.sh
.claude/: settings.json
.claude/commands/: architecture-agent.md  architecture-data-pipeline.md  architecture-domain-system.md  architecture-process-system.md  architecture-shared.md  architecture-system-evolution-review.md  architecture-system-evolution.md  architecture-system-integration.md  brainstorm.md  design.md  domain-agent.md  model-data-flow.md  model-domain.md  model-evolution.md  model-system.md  model-workflow.md  product-owner.md  sync-docs.md  tech-stack-agent.md
.claude/skills/: grill-me.md
design/: brainstorm-agent.md  domain-agent.md  product-agent.md
docs/: architecture.md  engine-observability-impl.md
docs/index/: flows.md  invariants.md  repo.md  schema-map.md  tests.md
engine/: logger.py  mcp_server.py  renderer.py  tool_handler.py
engine/logs/: event_schema.md
engine/schemas/: brief.base.json  brief.input.json  brief.mcp.json  design-data_pipeline.json  design-domain_system.json  design-process_system.json  design-system_evolution.json  design-system_integration.json  design.input.json  design.mcp.json  domain.input.json  domain.mcp.json  model-data-flow.json  model-domain.json  model-evolution.json  model-system.json  model-workflow.json  prd.base.json  prd.input.json  prd.mcp.json  tech_stack.base.json  tech_stack.input.json  tech_stack.mcp.json
templates/: CLAUDE.md
(+6 files in other folders)
