[project]
name = "agentic-team"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
    "jsonschema>=4.0",
    "structlog>=24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["engine/tests"]
markers = [
    "invariant: handler enforces orchestrator ownership of metadata fields",
    "lifecycle: correct versioning behavior through v1/v2/approve chain",
    "contract: DAG node boundary handoffs between agents",
    "renderer: artifact-to-text rendering output",
    "observability: structured event logging for agent misbehavior detection",
]
